--- a/index.html
+++ b/index.html
@@ -3,9 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Delius+Unicase:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title>Grid</title>
 </head>
 <body>
+    <div class="container">
+        <h1>Architectural Photography</h1>
+        <div class="grid">
+            <img src="images/img1.png" alt="">
+            <img src="images/img2.png" alt="">
+            <img src="images/img3.png" alt="">
+            <img src="images/img4.png" alt="">
+            <img src="images/img5.png" alt="">
+            <img src="images/img6.png" alt="">
+        </div>
+    </div>
+    <div class="container">
+        <h1>Still Life Photography</h1>
+        <div class="grid2">
+            <img src="images/img2-1.png" alt="">
+            <img src="images/img2-2.png" alt="">
+            <img src="images/img2-3.png" alt="">
+            <img src="images/img2-4.png" alt="">
+            <img src="images/img2-5.png" alt="">
+            <img src="images/img2-6.png" alt="">
+        </div>
+    </div>
     
 </body>
 </html>
