--- a/index.html
+++ b/index.html
@@ -32,6 +32,21 @@
             <img src="images/img2-6.png" alt="">
         </div>
     </div>
+    <div class="container">
+        <h1>Portrait and Fashion Photography</h1>
+        <div class="grid3">
+            <img src="images/img3-1.png" alt="">
+            <img src="images/img3-2.png" alt="">
+            <img src="images/img3-3.png" alt="">
+            <img src="images/img3-4.png" alt="">
+            <img src="images/img3-5.png" alt="">
+            <img src="images/img3-6.png" alt="">
+            <img src="images/img3-7.png" alt="">
+            <img src="images/img3-8.png" alt="">
+            <img src="images/img3-9.png" alt="">
+            <img src="images/img3-10.png" alt="">
+        </div>
+    </div>
     
 </body>
 </html>
